<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/emptypp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="158dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif-monospace"
        android:text="Name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#a6a5a4"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageMentor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="33dp"
        android:src="@drawable/emptypp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRole" />

    <TextView
        android:id="@+id/textRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Software Developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <TextView
        android:id="@+id/myprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/my_profile"
        android:textAlignment="center"
        android:textColor="#1A1A1A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="17dp"
        android:src="@drawable/searchicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMentorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="serif-monospace"
        android:text="Mentor Name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMentor" />

    <TextView
        android:id="@+id/textUsersMentor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="name's mentor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMentorName" />

    <ImageView
        android:id="@+id/editProfile"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="140dp"
        android:src="@drawable/editprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsersMentor" />

    <ImageView
        android:id="@+id/organizationButton"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="33dp"
        android:src="@drawable/organizationicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsersMentor" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="#000000"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myprofile" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="369sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="#000000"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="reszeg.alpar@student.ms.sapientia.ro"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="369sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <TextView
        android:id="@+id/textPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="phonenumber field"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="369sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/office_location"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

</androidx.constraintlayout.widget.ConstraintLayout>